Applied Bootstrap Flex Grid to footer for positioning of text. Applied Bootstrap Flex Grid to card buttons to position in center. Changed all h1 text to green with shadow of gold. Changed contact icons to green. Added gold shadow to contact text and icons. Added navbar-nav class which was missing from Navbar to fix collapse so that it would expand vertically instead of horizontally. Increased size of nav-link text.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,19 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 
+.nav-pills {
+  --bs-nav-pills-link-active-bg: green;
+}
+
+.nav {
+  --bs-nav-link-color: #aaa311;
+}
+
+
+.nav-item {
+
+  font-size: 2rem;
+}
+
 .intro {
   background-image: url(./img/site/websiteBackground06.png); 
   background-repeat: no-repeat;  
@@ -34,6 +48,8 @@
   
 }
 
+
+
 #billyCarousel {
   box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, .7);
 }
@@ -53,23 +69,23 @@
 }
 
 #section1 h1 {
-  color: black;
-  text-shadow: 2px 2px 4px #000000;
+  color: green;
+  text-shadow: 2px 2px 4px gold;
 }
 
 #section2 h1 {
-  color: black;
-  text-shadow: 2px 2px 4px #000000;
+  color: green;
+  text-shadow: 2px 2px 4px gold;
 }
 
 #section3 h1 {
-  color: black;
-  text-shadow: 2px 2px 4px #000000;
+  color: green;
+  text-shadow: 2px 2px 4px gold;
 }
 
 #section4 h1 {
-  color: black;
-  text-shadow: 2px 2px 4px #000000;
+  color: green;
+  text-shadow: 2px 2px 4px gold;
 }
 
 #section4 .card {
@@ -83,12 +99,12 @@
 }
 
 #section5 h1 {
-  color: black;
-  text-shadow: 2px 2px 4px #000000;
+  color: green;
+  text-shadow: 2px 2px 4px gold;
 }
 
 #section5 #contactData {
-  text-shadow: 2px 2px 4px #000000;
+  text-shadow: 2px 2px 4px gold;
 }
 
 #section5 #contactData p{
@@ -101,6 +117,7 @@
 
 #section5 .bi {
   font-size: 2.5rem;
+  color: green;
 }
 
 #section5 a {
@@ -109,13 +126,7 @@
 
 
 
-.nav-pills {
-  --bs-nav-pills-link-active-bg: green;
-}
 
-.nav {
-  --bs-nav-link-color: #aaa311;
-}
 
 .card {
   box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, .7);
@@ -130,7 +141,16 @@ audio{
 
 footer {
   background-color: orange;
-  height: auto; 
+  height: 150px; 
+}
+
+footer .d-flex {
+  height: 150px; 
+}
+
+footer p {
+  color: #aaa311;
+  margin-bottom: 0px;
 }
 
 
@@ -138,6 +158,17 @@ footer {
 All smart phones
 */
 @media (max-width: 575px) {
+
+  #firstNavItem {
+  
+     margin-left: 0px!important;
+     
+  }
+
+  .nav-item {
+
+    font-size: 1rem;
+  }
   
   .jumbotron h1 {
     padding-top:0px;
